<resources>
    <string name="app_name">Read or Watch</string>
    <string name="loginHeaderText">Login</string>
    <string name="signInButtonText">Sign in</string>
    <string name="signUpButtonText">Sign up</string>
    <string name="passwordEditTextHint">Password</string>
    <string name="loginEditTextHint">E-mail</string>
    <string name="repeatPassEditTextHint">Repeat password</string>

    <string name="watchChoice">WATCH A MOVIE</string>
    <string name="readChoice">READ A BOOK</string>

    <string name="detailsOpenPDFButtonText">Open PDF</string>
    <string name="detailsWatchButtonText">Watch</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="kids">Kids</string>
    <string name="home">Home</string>
    <string name="genres">Genres</string>
    <string name="emailValidMessage">Please enter a correct e-mail address</string>
    <string name="passwordValidMessage">Password must be between 5 and 40 characters long (no spaces)</string>
    <string name="repeatPassValidMessage">Passwords do not match</string>

    <string name="signUp">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="videoPlayerTitle">S1: The beginnings</string>

    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>

    <string name="emailInvalidError">Email must be valid.</string>
    <string name="emailIsEmpty">Email can\'t be empty.</string>
    <string name="emailTooLongError">Email must be less than 320 characters long.</string>
    <string name="emailLocalPartTooLongError">Local part must be 64 characters long or less.</string>
    <string name="emailDomainPartTooLongError">Domain part must be 255 characters long or less.</string>
    <string name="emailStartWithError">Local part must start with a digit or a letter.</string>
    <string name="emailEndWithError">Local part must end with a digit or a letter.</string>
    <string name="emailConsecutiveDotsError">Consecutive dots are not allowed.</string>

    <string name="passwordTooShort">Password must be at least 8 characters long.</string>
    <string name="passwordTooLong">Password must be less than 128 characters long.</string>
    <string name="passwordNoDigit">Password must contain at least one digit.</string>
    <string name="passwordNoLowercase">Password must contain at least one lower case letter.</string>
    <string name="passwordNoUppercase">Password must contain at least one upper case letter.</string>
    <string name="passwordNoSpecialCharacter">Password must contain at least one special character.</string>
    <string name="passwordsDoNotMatch">Passwords must match.</string>
    <string name="incorrectPasswordOrEmailError">Incorrect password or email.</string>
    <string name="emailAlreadyTakenError">Email already taken.</string>
    <string name="serverConnectionFailedError">Server connection failed.</string>

    <string name="popular">Popular</string>
    <string name="movie">Movie</string>
    <string name="animation">Animation</string>
    <string name="horror">Horror</string>
    <string name="drama">Drama</string>
</resources>