<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/header_bar"
        style="@style/headerBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:outlineProvider="none"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/appLogoHeight"
            android:layout_height="@dimen/appLogoHeight"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/appLogoMarginStart"
            android:background="@drawable/app_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/appLogoMarginStart"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/headline6" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/filter_component"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:elevation="2dp"
        android:outlineProvider="none"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_bar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filter_first"
                style="@style/filter_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

            <TextView
                android:id="@+id/filter_second"
                style="@style/filter_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animation" />

            <TextView
                android:id="@+id/filter_third"
                style="@style/filter_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horror" />

            <TextView
                android:id="@+id/filter_fourth"
                style="@style/filter_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drama" />
        </LinearLayout>
    </HorizontalScrollView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:id="@+id/recyclerViewRoot"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/bastille"
                    android:foregroundGravity="center"
                    android:paddingTop="8dp"
                    tools:listitem="@layout/item_grid_home" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>