<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity">

    <LinearLayout
        android:id="@+id/header_bar"
        style="@style/headerBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:outlineProvider="none"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/appLogoHeight"
            android:layout_height="@dimen/appLogoHeight"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/appLogoMarginStart"
            android:background="@drawable/app_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/appNameMarginStart"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/headline6" />
    </LinearLayout>

    <TextView
        android:id="@+id/bookText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/readChoice"
        android:textSize="@dimen/choiceTextSize"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bookImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="@dimen/choiceImageSize"
        android:layout_height="@dimen/choiceImageSize"
        android:src="@drawable/book_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookText"
        app:layout_constraintBottom_toTopOf="@+id/movieText"
        android:contentDescription="@string/readChoice">
    </ImageView>

    <TextView
        android:id="@+id/movieText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watchChoice"
        android:textSize="@dimen/choiceTextSize"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/bookImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/movieImage">
    </TextView>

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="@dimen/choiceImageSize"
        android:layout_height="@dimen/choiceImageSize"
        android:src="@drawable/tv_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/watchChoice">
    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>